fix(dashboard): fix chat widget wrapping, fix scrollbars on status widget

--- a/frontend/src/css/style.scss
+++ b/frontend/src/css/style.scss
@@ -141,7 +141,7 @@ body {
       1px -1px 0 #000,
       -1px 1px 0 #000,
       1px 1px 0 #000;
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 
   .user {
